Map direction works for local areas; Next: Better search abilities

--- a/CommutHer/Base.lproj/Main.storyboard
+++ b/CommutHer/Base.lproj/Main.storyboard
@@ -265,7 +265,6 @@
         <!--View Controller-->
         <scene sceneID="VfU-zl-XVc">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wED-sb-q5O" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Lp7-eZ-Rg2" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="WzI-HN-RHK"/>
@@ -404,13 +403,13 @@
                         </variation>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wED-sb-q5O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1935" y="130.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="DLx-gk-YVf">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mrY-kz-VfM" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="XFF-e8-KvC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="o5d-1r-1uB"/>
@@ -467,13 +466,13 @@
                         </constraints>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mrY-kz-VfM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2577" y="130.5"/>
         </scene>
         <!--Map-->
         <scene sceneID="V9E-Dr-WSp">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nkq-h5-2Ts" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="FYP-3L-0UU" customClass="MapViewController" customModule="CommutHer" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wWY-dZ-3dw"/>
@@ -483,7 +482,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1pi-yf-zY0">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1pi-yf-zY0">
                                 <rect key="frame" x="15" y="72" width="56" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="56" id="0SK-JS-Z0t"/>
@@ -495,13 +494,13 @@
                                     </mask>
                                 </variation>
                             </button>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="HVO-k9-6xR">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="HVO-k9-6xR">
                                 <rect key="frame" x="0.0" y="111" width="600" height="441"/>
                                 <connections>
                                     <outlet property="delegate" destination="FYP-3L-0UU" id="3BN-am-8F5"/>
                                 </connections>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2YF-Zd-nKn">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2YF-Zd-nKn">
                                 <rect key="frame" x="538" y="72" width="48" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="48" id="e5F-xD-0x2"/>
@@ -567,9 +566,10 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" id="lkr-c2-zh2"/>
                     <connections>
-                        <outlet property="mapview" destination="HVO-k9-6xR" id="PM9-Gj-Zee"/>
+                        <outlet property="mapview" destination="HVO-k9-6xR" id="TGr-PX-QcT"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nkq-h5-2Ts" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4578" y="774.75"/>
         </scene>
@@ -585,7 +585,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current CommutHer Requests" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ip2-db-Ik9">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Current CommutHer Requests" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ip2-db-Ik9">
                                 <rect key="frame" x="184" y="77" width="232" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Ykv-Zg-R3c"/>
@@ -595,7 +595,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EKF-EJ-0x9">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EKF-EJ-0x9">
                                 <rect key="frame" x="0.0" y="111" width="600" height="440"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -698,7 +698,6 @@
         <!--Tab Bar Controller-->
         <scene sceneID="rOe-Ne-AIi">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="N03-f7-cXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="i4E-wz-h4l" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="qsK-7M-9JS"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="MaX-Uj-zGF">
@@ -712,6 +711,7 @@
                         <segue destination="PSy-eH-dek" kind="relationship" relationship="viewControllers" id="QSV-en-qpi"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N03-f7-cXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3880.5" y="432"/>
         </scene>
@@ -727,7 +727,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNy-18-zDg">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNy-18-zDg">
                                 <rect key="frame" x="257" y="265" width="86" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="eXe-VY-Wog"/>
@@ -736,7 +736,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4hR-mA-Mcd">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4hR-mA-Mcd">
                                 <rect key="frame" x="0.0" y="346" width="600" height="205"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -750,7 +750,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BTs-qJ-dUe">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BTs-qJ-dUe">
                                 <rect key="frame" x="144" y="310" width="313" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="313" id="4jz-5n-vxP"/>
@@ -761,7 +761,7 @@
                                     <segment title="Ratings"/>
                                 </segments>
                             </segmentedControl>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O4U-5L-qQg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O4U-5L-qQg">
                                 <rect key="frame" x="225" y="100" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="RJL-0J-liG"/>
